# mcp-example

./: CLAUDE.md  pyproject.toml  requirements.txt
core/a2a/: agent_executor.py  app.py  main.py  test_client.py
core/app/: app.js  index.html
core/client/: README.md  client.py
core/client/common/: prompt.py  service.py  utils.py
core/client/common/functional/: singleton.py
core/client/common/llm/: model.py  open_ai_provider.py  provider.py
core/client/common/llm/openai_provider/: message.py  model.py
core/client/models/: request.py  response.py
core/client/resource/: prompt.yaml
core/client/resource/app/: index.html
core/client/route/: __init__.py  auth.py  chat.py  pne.py  test.py  tool.py
core/client/service/: chat.py  pne.py  pne_langchain.py  tool.py
core/server/: README.md  alpha.py  beta.py  resource.py  run_server.sh
core/strands_agent/: agent.py  main.py  route.py
core/strands_agent/resource/app/: README.md
