[project]
name = "mcp-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "fastmcp>=2.12.3",
    "langchain>=1.0.2",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pyjwt>=2.10.1",
]
